# arcvo

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CRITICAL_FILES.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  Makefile  PHASE3_COMPLETION_REPORT.md  PHASE3_ROADMAP.md  QUICK_START.md  README.md  create_odoo_db.py  docker-compose.yaml  init_odoo_db.py  package.json  pnpm-lock.yaml  test_agent_registry.py  verify_agent_addon.py  verify_odoo_init.py
backend/: Dockerfile.hermes  pyproject.toml  test_hermes_chat.py  test_routes.py  validate_hermes.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  internal_access.py  security.py
backend/app/dashboard/: __init__.py  launcher.py  tools.py
backend/app/hermes/: __init__.py  launcher.py  tools.py  web.py
backend/app/hermes_runtime/: __init__.py  agent.py  core.py  registry.py  task.py
backend/scripts/: e2e_check.py  hermes_setup.py  import_supabase_youtube.py  odoo_health.py  run_hermes_dashboard.py  test_hermes.py  test_ollama_api.py  validate_addons.py  validate_arcvo_agents.py
backend/tests/: test_action_policy.py  test_agent_runner.py  test_agent_service.py  test_archive_service.py  test_auth.py  test_config.py  test_deploy_operations_status.py  test_deploy_service.py  test_deploy_support_status.py  test_health.py  test_helpdesk_service.py  test_hermes_web.py  test_integration_complete.py  test_internal_access.py  test_knowledge_service.py  test_odoo_client.py  test_odoo_service.py  test_supabase_importer.py  test_youtube.py
docs/: development.md  (+4 more)
(+195 files in other folders)
