[project]
name = "odoo-fastapi-template-backend"
version = "0.1.0"
description = "Minimal FastAPI backend for an Odoo development template."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.125.0",
    "pydantic-settings>=2.12.0",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
